--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -114,6 +114,12 @@ h3 {
   margin: 0 auto;
 }
 
+
+.search {
+  width: 50%;
+  margin: 0 auto;
+
+}
 .form-group {
   margin-bottom: 10px;
 }
@@ -127,6 +133,36 @@ h3 {
   border-radius: 5px;
   margin-bottom: 10px;
   font-family: inherit;
+
+}
+
+.form-group-search{
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.form-group-search input{
+  width: 80%;
+  padding: 10px;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  font-family: inherit;
+
+}
+
+.form-group-search button{
+  width: 20%;
+  padding: 10px;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-family: inherit;
+
 }
 
 .form-group label {
