--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -181,7 +181,7 @@ h3 {
   font-weight: 700;
   cursor: pointer;
   text-align: center;
-  appearance: button;
+  /* appearance: button; */
   display: flex;
   align-items: center;
   justify-content: center;
